--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <header>
       <img id='logo' src='img/logo.png'>
-      <span>Delicious</span></br>
-      <span id="underLogo">THE BEST FOOD BLOG ON THE WEB</span>
+      <span id="delicious">Delicious</span>
+      <div id="underLogo">&nbsp; THE BEST FOOD BLOG ON THE WEB</div>
       <div class="social">
         <img src='img/fb-icon.png' />
         <img src='img/twit-icon.png' />
@@ -21,12 +21,13 @@
         <img src='img/rss-icon.png' />
         <img src='img/mail-icon.png' />
     </header>
+    <hr id="line"></hr>
     <main>
       <h1>Chocolate Pizza</h1>
       <p id="underH1">POSTED ON 15 DEC 2013 / DESSERTS
       <span id="printerIcon"><img src="img/print-icon.png" />PRINT</span>
       </p>
-      <img src="img/choco-pizza.png" />
+      <img id="pizza" src="img/choco-pizza.png" />
       <p class="instructions">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <p class="instructions">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <p class="instructions">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -34,14 +35,16 @@
     </main>
     <footer>
       <img id="authorPic" src="img/van-pic.png"/>
-      <span>Vanessa Stevenson</span><br>
-      <span id="underLogo">Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</span>
+      <span id="author"><strong>Vanessa Stevenson</strong></span><br>
+      <span id="underFooter"> &nbsp; Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.</span>
       <div id="share">
-        SHARE RECIPE
+        <a href="http://www.facebook.com">SHARE RECIPE</a>
       </div>
-      <p><div class="divider">
+      <p><div class="divider" align="center">
         <div class="center"><img src="img/small-logo.png"></div>
       </div></p>
+      <p id="copyright" align="center">Delicious © 2013. All Rights Reserved.
+      <br>Proudly published with Ghost.</p>
     </footer>
   </body>
 </html>
