--- a/index.html
+++ b/index.html
@@ -30,7 +30,42 @@
       <p class="instructions">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <p class="instructions">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <p class="instructions">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p><img src="img/list-bg.png">
+      <div class='checkList'>
+        <img src="img/list-bg.png">
+        <form id='listLeft' action="listLeft" method="get">
+          <input class ='selection_checkbox'type="checkbox" name="" value=""/>
+          <label for="checkBox" class="selection_label">1 1/2 cups milk</label><br>
+          <input class ='selection_checkbox'type="checkbox" name="" value="">
+          <label for="checkBox" class="selection_label">1/2 cup mascarpone</label><br>
+          <input class ='selection_checkbox'type="checkbox" name="" value="">
+          <label for="checkBox" class="selection_label">1/2 tsp pink salt</label><br>
+          <input class ='selection_checkbox'type="checkbox" name="" value="">
+          <label for="checkBox" class="selection_label">1 lb Black Mission Figs</label><br>
+          <input class ='selection_checkbox'type="checkbox" name="" value="">
+          <label for="checkBox" class="selection_label">1/2 cup brown sugar</label><br>
+          <input class ='selection_checkbox'type="checkbox" name="" value="">
+          <label for="checkBox" class="selection_label">2-4 tbsp water</label><br>
+
+
+        </form>
+        <form id='listRight' action="listRight" method="get">
+          <input class ='selection_checkbox'type="checkbox" name="" value="">
+          <label for="checkBox" class="selection_label">1 1/2 cups heavy cream</label><br>
+          <input class ='selection_checkbox'type="checkbox" name="" value="">
+          <label for="checkBox" class="selection_label">1/3 granulated sugar</label><br>
+          <input class ='selection_checkbox'type="checkbox" name="" value="">
+          <label for="checkBox" class="selection_label">2 egg yolks</label><br>
+          <input class ='selection_checkbox'type="checkbox" name="" value="">
+          <label for="checkBox" class="selection_label">1 lemon, juiced</label><br>
+          <input class ='selection_checkbox'type="checkbox" name="" value="">
+          <label for="checkBox" class="selection_label">2 tbsp butter</label><br>
+          <input class ='selection_checkbox'type="checkbox" name="" value="">
+          <label for="checkBox" class="selection_label">1 cup honey roasted pecans, roughly chopped</label><br>
+
+
+        </form>
+
+      </div>
     </main>
     <footer>
       <img id="authorPic" src="img/van-pic.png"/>
