added links to the social bar

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
       <span id="delicious">Delicious</span>
       <div id="underLogo">&nbsp; THE BEST FOOD BLOG ON THE WEB</div>
       <div class="social">
-        <img src='img/fb-icon.png' />
-        <img src='img/twit-icon.png' />
-        <img src='img/gp-icon.png' />
-        <img src='img/insta-icon.png' />
-        <img src='img/flic-icon.png' />
-        <img src='img/pint-icon.png' />
-        <img src='img/rss-icon.png' />
-        <img src='img/mail-icon.png' />
+        <a href='https://www.facebook.com/'target="_blank" title='Share on Facebook'><img src='img/fb-icon.png' /></a>
+        <a href='https://twitter.com/'target="_blank" title='Share on Twitter'><img src='img/twit-icon.png' /></a>
+        <a href='https://plus.google.com/'target="_blank" title='Share on Google Plus'><img src='img/gp-icon.png' /></a>
+        <a href='https://www.instagram.com/'target="_blank" title='Share on Instagram'><img src='img/insta-icon.png' /></a>
+        <a href='https://www.flickr.com/'target="_blank" title='Share on Flickr'><img src='img/flic-icon.png' /></a>
+        <a href='https://www.pinterest.com/'target="_blank" title='Share on Pinterest'><img src='img/pint-icon.png' /></a>
+        <a href='www.rss.com/'target="_blank" title='Create RSS Feed'><img src='img/rss-icon.png' /></a>
+        <a href='mailto:'target="_blank" title='Share through E-mail'><img src='img/mail-icon.png' /></a>
     </header>
     <hr id="line"></hr>
     <main>
