--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
         <img src='img/insta-icon.png' />
         <img src='img/flic-icon.png' />
         <img src='img/pint-icon.png' />
-        <img src='img/rss-icon.png' />
+        &nbsp; <img src='img/rss-icon.png' />
         <img src='img/mail-icon.png' />
     </header>
-    <hr id="line"></hr>
     <main>
       <h1>Chocolate Pizza</h1>
       <p id="underH1">POSTED ON 15 DEC 2013 / DESSERTS
@@ -32,7 +31,7 @@
       <p class="instructions">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <p class="instructions">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <div class='checkList'>
-        <img src="img/list-bg.png">
+        <img id="notepad" src="img/list-bg.png">
         <form id='listLeft' action="listLeft" method="get">
           <input class ='selection_checkbox'type="checkbox" name="" value=""/>
           <label for="checkBox" class="selection_label">1 1/2 cups milk</label><br>
